--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,5 @@ SERVER_PORT=4200
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/ecommerce_db?schema=public"
+
+JWT_SECRET=secret_key
