--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.13",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.35.0",
+    "eslint-config-next": "^13.3.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-unicorn": "^45.0.2",
+    "lint-staged": "^13.1.1",
+    "prettier": "^2.8.4",
+    "typescript": "5.0.4",
+    "@types/node": "18.15.13",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11"
   }
 }
