--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,9 @@
     "eslint-plugin-unicorn": "^45.0.2",
     "lint-staged": "^13.1.1",
     "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "tailwindcss": "^3.2.6",
+    "@tailwindcss/typography": "^0.5.9",
     "typescript": "5.0.4",
     "@types/node": "18.15.13",
     "@types/react": "18.0.38",
