--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "clsx": "^1.2.1",
+    "framer-motion": "^10.12.4",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/node": "18.15.13",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.3.0",
@@ -23,10 +30,6 @@
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.6",
-    "@tailwindcss/typography": "^0.5.9",
-    "typescript": "5.0.4",
-    "@types/node": "18.15.13",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11"
+    "typescript": "5.0.4"
   }
 }
