--- a/server/package.json
+++ b/server/package.json
@@ -30,10 +30,12 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
     "@prisma/client": "^4.13.0",
+    "@types/uuid": "^9.0.1",
     "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "ts-morph": "^18.0.0"
+    "ts-morph": "^18.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
