implements product page

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 SITE_NAME="Pretty ecommerce"
 SERVER_DOMAIN=localhost:4200
 SERVER_GRAPHQL_API_ENDPOINT=/graphql
-SERVER_API_STATIC_FILES_URL=http://${SERVER_DOMAIN}
+SERVER_API_STATIC_FILES_URL=http://${SERVER_DOMAIN}/
