--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@vercel/og": "^0.5.4",
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.4",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
