--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
