--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,7 @@ API_PORT=4200
 API_HOST=http://localhost:
 
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/ecommerce?schema=public
+
+EXTERNAL_SYSTEM_URL=http://192.168.1.71:80/1C_Example/hs/externalsystem/api/v1/
+EXTERNAL_SYSTEM_LOGIN="Администратор (ФедоровБМ)"
+EXTERNAL_SYSTEM_PASSWORD=12345
