--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/serve-static": "^3.0.1",
     "@prisma/client": "^4.13.0",
     "@types/uuid": "^9.0.1",
+    "dotenv": "^16.1.3",
     "graphql": "^16.6.0",
     "prisma": "^4.13.0",
     "reflect-metadata": "^0.1.13",
